refactor(TROC-2): déplacer ProductImage dans common, refacto Lombok/MapStruct et corriger le flux d'upload