@@ -1,17 +1,17 @@
 package com.puericulture.troc.service;
 
 import com.puericulture.common.entity.Product;
+import com.puericulture.common.entity.ProductImage;
 import com.puericulture.common.repository.ProductRepository;
 import com.puericulture.config.errormanager.exception.BadRequestException;
 import com.puericulture.config.errormanager.exception.NotFoundException;
 import com.puericulture.troc.dto.ProductImageDto;
-import com.puericulture.troc.entity.ProductImage;
 import com.puericulture.troc.mapper.ProductImageMapper;
 import com.puericulture.troc.repository.ProductImageRepository;
 import java.util.List;
-import java.util.stream.Collectors;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 @Service
 public class ProductImageService {
@@ -32,12 +32,17 @@ public class ProductImageService {
         this.productRepository = productRepository;
     }
 
+    @Transactional(readOnly = true)
     public List<ProductImageDto> getImagesByProductId(Long productId) {
-        return productImageRepository.findByProduct_Id(productId).stream()
-                .map(productImageMapper::toDto)
-                .collect(Collectors.toList());
+        Product product =
+                productRepository
+                        .findById(productId)
+                        .orElseThrow(
+                                () -> new NotFoundException("Produit introuvable : " + productId));
+        return product.getImages().stream().map(productImageMapper::toDto).toList();
     }
 
+    @Transactional
     public ProductImageDto addImage(String imageUrl, Long productId) {
         Product product =
                 productRepository
@@ -45,7 +50,7 @@ public class ProductImageService {
                         .orElseThrow(
                                 () -> new NotFoundException("Produit introuvable : " + productId));
 
-        long currentCount = productImageRepository.countByProduct_Id(productId);
+        int currentCount = product.getImages().size();
         if (currentCount >= MAX_IMAGES_PER_PRODUCT) {
             throw new BadRequestException(
                     "Maximum " + MAX_IMAGES_PER_PRODUCT + " images par produit");
@@ -54,7 +59,7 @@ public class ProductImageService {
         ProductImage entity = new ProductImage();
         entity.setProduct(product);
         entity.setImageUrl(imageUrl);
-        entity.setPosition((int) currentCount + 1);
+        entity.setPosition(currentCount + 1);
 
         return productImageMapper.toDto(productImageRepository.save(entity));
     }
